<resources>
    <string name="app_name">Notes</string>
    <string name="category">Category:</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_really_want_to_delete_note">Do you really want to delete this note? Operation is irreversible.</string>
    <string name="note_status_done">Done.</string>
    <string name="note_saved">Note saved.</string>
    <string name="note_status_in_progress">In progress.</string>
    <string name="do_you_really_want_to_delete_notes">Do you really want to delete selected notes? Operation is irreversible!</string>
    <string name="shared_note">Shared notes</string>
    <string name="category_name_home">Home</string>
    <string name="category_name_finance">Finance</string>
    <string name="category_name_work">Work</string>
    <string name="category_name_vacation">Vacation</string>
    <string name="category_name_school">School</string>
    <string name="category_name_other">Other</string>
    <string name="note_sharable_title">Title: </string>
    <string name="note_sharable_status">Status: </string>
    <string name="note_sharable_category">Category: </string>
    <string name="note_sharable_due_date">Due date: </string>
    <string name="note_sharable_content">Content: </string>
    <string name="priority">Priority</string>
    <string name="note_priority_default">Normal</string>
    <string name="note_priority_high">High</string>
    <string name="note_priority_critical">Critical</string>
    <string name="note_priority_low">Low</string>
    <string name="ask_manual_camera_permission">Please grant Camera permission manually.</string>
    <string name="s_title">Title:</string>
    <string name="s_due_date">Due date:</string>
    <string name="s_set_date">set date</string>
    <string name="s_set_time">set time</string>
    <string name="s_note_content">Note content:</string>
    <string name="s_attachments">Attachments:</string>
    <string name="s_delete_due_date">Delete Due Date</string>
    <string name="s_go_to_attachments">Go to attachments</string>
    <string name="s_priority_indicator">Priority indicator</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="delete_photo">Delete photo</string>
    <string name="ask_manual_file_write_permission">Please grant file write permission manually.</string>
    <string name="note_saved_to_downloads">Note saved to downloads.</string>
</resources>
