<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteCreateReadUpdateFragment">

    <ScrollView
        android:id="@+id/scrollViewNote"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_note_row_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxNoteDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/colorCategoryDefaultText"
                    android:paddingEnd="4dip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/s_title"
                            android:textColor="@color/colorCategoryDefaultText"
                            android:textSize="12sp" />

                        <ImageButton
                            android:id="@+id/imageButtonGoToAttachments"
                            android:layout_width="24dip"
                            android:layout_height="24dip"
                            android:backgroundTint="@android:color/transparent"
                            android:contentDescription="@string/s_go_to_attachments"
                            android:src="@drawable/ic_attach_file" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/editTextNoteTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/title"
                        android:inputType="textPersonName"
                        android:paddingBottom="10dip"
                        android:textColor="@color/colorCategoryDefaultText"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="?android:attr/textColorHintInverse"
                        android:textColorLink="#FFFFFF"
                        android:textCursorDrawable="@drawable/text_cursor_drawable_custom" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewCategoryHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/category"
                android:textColor="@color/colorCategoryDefaultText"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorCategoryDefaultText" />

            <TextView
                android:id="@+id/textViewPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/priority"
                android:textColor="@color/colorCategoryDefaultText"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorCategoryDefaultText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/s_due_date"
                android:textColor="@color/colorCategoryDefaultText"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_set_date"
                    android:padding="4dip"
                    android:textColorHint="?android:attr/textColorHintInverse" />

                <TextView
                    android:id="@+id/textViewDueTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_set_time"
                    android:padding="4dip"
                    android:textColorHint="?android:attr/textColorHintInverse" />

                <ImageButton
                    android:id="@+id/imageButtonDueDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/s_delete_due_date"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@android:drawable/ic_delete"
                    android:visibility="invisible" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/s_note_content"
                android:textColor="@color/colorCategoryDefaultText"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextNoteContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/note"
                android:inputType="textMultiLine|text"
                android:maxLines="100"
                android:minLines="10"
                android:outlineProvider="bounds"
                android:paddingBottom="10dip"
                android:textColor="@color/colorCategoryDefaultText"
                android:textColorHint="?android:attr/textColorHintInverse"
                android:textColorLink="@android:color/transparent"
                android:textCursorDrawable="@drawable/text_cursor_drawable_custom" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/s_attachments"
                android:textColor="@color/colorCategoryDefaultText"
                android:textSize="12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewNoteAttachments"
                android:layout_width="match_parent"
                android:layout_height="150dip"
                android:orientation="horizontal"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayoutAttachments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:divider="?attr/dividerVertical"
                    android:dividerPadding="4dip"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>