<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteCreateUpdateFragment">

    <ScrollView
        android:id="@+id/scrollViewNote"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_note_row_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dip">

            <EditText
                android:id="@+id/editTextNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:paddingBottom="10dip"
                android:textColor="@color/colorCategoryDefaultText"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="?android:attr/textColorHintInverse"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@drawable/text_cursor_drawable_custom"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textViewCategoryHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/colorCategoryDefaultText" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_surface" />

            <EditText
                android:id="@+id/editTextNoteContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:hint="@string/note"
                android:inputType="text"
                android:minLines="1"
                android:paddingBottom="10dip"
                android:singleLine="false"
                android:textColor="@color/colorCategoryDefaultText"
                android:textColorHint="?android:attr/textColorHintInverse"
                android:textColorLink="@android:color/transparent"
                android:textCursorDrawable="@drawable/text_cursor_drawable_custom" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>